--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Excalizan/Scrypte.git"
+    "url": "git+https://github.com/newzenna/insbot.git"
   },
   "keywords": [
     "telegram",
@@ -19,9 +19,9 @@
   "author": "Excalizan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Excalizan/Scrypte/issues"
+    "url": "https://github.com/newzenna/insbot.git"
   },
-  "homepage": "https://github.com/Excalizan/Scrypte#readme",
+  "homepage": "https://github.com/newzenna/insbot.git",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
