--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/newzenna/insbot.git"
+    "url": "git+https://github.com/Excalizan/Scrypte.git"
   },
   "keywords": [
     "telegram",
@@ -19,9 +19,9 @@
   "author": "Excalizan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/newzenna/insbot.git"
+    "url": "https://github.com/Excalizan/Scrypte/issues"
   },
-  "homepage": "https://github.com/newzenna/insbot.git",
+  "homepage": "https://github.com/Excalizan/Scrypte#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -31,6 +31,7 @@
     "mongoose": "^7.4.4",
     "network-speed": "^2.1.1",
     "node-telegram-bot-api": "^0.61.0",
+    "nodemon": "^3.0.1",
     "spotifydl-core": "^0.2.0",
     "spottydl": "^0.2.2",
     "ytdl-core": "^4.11.5"
